# marketlens-python

./: README.md  audit_multi_market.py  pyproject.toml
.github/workflows/: ci.yml
examples/: backtest_basic.py  backtest_imbalance.py  backtest_limit_orders.py  backtest_portfolio.py  backtest_spread.py  backtest_surface.py  event_strikes.py  execution_cost.py  implied_surfaces.py  microstructure.py  orderbook_replay.py  quickstart.py  series_backtest.py  single_market_replay.py
src/marketlens/: __init__.py  _base.py  _client.py  _constants.py  _pagination.py  exceptions.py
src/marketlens/backtest/: __init__.py  _engine.py  _fees.py  _fills.py  _portfolio.py  _results.py  _strategy.py  _types.py
src/marketlens/helpers/: __init__.py  convert.py  merge.py  replay.py  surface.py  walk.py
src/marketlens/resources/: __init__.py  events.py  exports.py  markets.py  orderbook.py  reference.py  series.py  signals.py
src/marketlens/types/: __init__.py  candle.py  event.py  history.py  market.py  orderbook.py  reference.py  series.py  shared.py  signal.py  trade.py
tests/: conftest.py  test_backtest.py  test_client.py  test_errors.py  test_pagination.py  test_replay.py  test_types.py  test_walk.py
