[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "marketlens"
version = "0.5.0"
description = "Historical tick-by-tick L2 orderbook reconstruction and backtesting primitives for Polymarket. Spread, impact, imbalance, and every trade, delivered as a DataFrame."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.25",
    "pydantic>=2.0",
    "pandas>=1.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "respx>=0.21",
]

[tool.hatch.build.targets.wheel]
packages = ["src/marketlens"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
